force-app/src/objects/OrderApi__Log__c.object
<CustomObject>
    <description>Logs track important events related to any &quot;Assignment&quot; object. Subscriptions use Logs to track all transaction and status change related events.</description>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Account.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the Subscription related to the Log.</description>
        <inlineHelpText>** System Calculated Override ** Link to the Subscription related to the Log.</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>OrderApi__Assignment__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Contact.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Date__c</fullName>
        <description>** System Calculated Required Override ** The date the Log was generated.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the Log was generated.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>** System Calculated ** Derived from the conditions of linked records related to the Log.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, OrderApi__System_Message__c)
/*
IF (OR(OrderApi__Subscription__c != null &amp;&amp; ISPICKVAL(OrderApi__Type__c,&apos;Subscription Activated&apos;),
OrderApi__Subscription__c != null &amp;&amp; ISPICKVAL(OrderApi__Type__c,&apos;Subscription Renewed&apos;)),

HYPERLINK(&quot;/&quot; &amp; Id, TEXT(OrderApi__Type__c) &amp; &quot; by &quot; &amp; OrderApi__User__r.FirstName &amp; &quot; &quot; &amp; OrderApi__User__r.LastName),
HYPERLINK(&quot;/&quot; &amp; Id, TEXT(OrderApi__Type__c) &amp; &quot; by &quot; &amp; OrderApi__User__r.FirstName &amp; &quot; &quot; &amp; OrderApi__User__r.LastName))*/</formula>
        <inlineHelpText>** System Calculated ** Derived from the conditions of linked records related to the Log.</inlineHelpText>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Invoice.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Invoice.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Customer_Generated__c</fullName>
        <description>** System Calculated ** Checked when the Log was generated by a customer, partner, or public (unauthenticated) user.</description>
        <formula>IF(ISPICKVAL(OrderApi__User__r.Profile.UserType,&quot;Standard&quot;), false, true)</formula>
        <inlineHelpText>** System Calculated ** Checked when the Log was generated by a customer, partner, or public (unauthenticated) user.</inlineHelpText>
        <label>Is Customer Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Item.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Payment Method.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Payment Method.</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>OrderApi__Payment_Method__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Receipt Line.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Receipt Line.</inlineHelpText>
        <label>Receipt Line</label>
        <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Receipt.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Receipt.</inlineHelpText>
        <label>Receipt</label>
        <referenceTo>OrderApi__Receipt__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Sales Order Line.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Sales Order Line.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Sales Order.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Sales Order.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Scheduled_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Scheduled Payment.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Scheduled Payment.</inlineHelpText>
        <label>Scheduled Payment</label>
        <referenceTo>OrderApi__Scheduled_Payment__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Subscription Line.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Subscription Line.</inlineHelpText>
        <label>Subscription Line</label>
        <referenceTo>OrderApi__Subscription_Line__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Subscription Plan.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Subscription Plan.</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Upgrade_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Item that the Subscription was upgraded too.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Item that the Subscription was upgraded too.</inlineHelpText>
        <label>Subscription Upgrade Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Subscription related to the Log.</description>
        <inlineHelpText>Link to the Subscription related to the Log.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__System_Message__c</fullName>
        <description>** System Calculated ** System generated message that provides context for the Log - the value of this field is used when generating the &quot;Description&quot; for the Log and is populated by a system trigger.</description>
        <inlineHelpText>** System Calculated ** System generated message that provides context for the Log - the value of this field is used when generating the &quot;Description&quot; for the Log and is populated by a system trigger.</inlineHelpText>
        <label>System Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Type__c</fullName>
        <description>** System Calculated Required Override ** The Type of Log.</description>
        <inlineHelpText>** System Calculated Required Override ** The Type of Log.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Assigned</fullName>
                </value>
                <value>
                    <fullName>Contact Unassigned</fullName>
                </value>
                <value>
                    <fullName>Invoice Sent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payment Method Error Notification Sent</fullName>
                </value>
                <value>
                    <fullName>Payment Method Updated</fullName>
                </value>
                <value>
                    <fullName>Payment Received</fullName>
                </value>
                <value>
                    <fullName>Scheduled Payment Declined</fullName>
                </value>
                <value>
                    <fullName>Scheduled Payment Processed</fullName>
                </value>
                <value>
                    <fullName>Subscription Activated</fullName>
                </value>
                <value>
                    <fullName>Subscription Cancelled</fullName>
                </value>
                <value>
                    <fullName>Subscription Expired</fullName>
                </value>
                <value>
                    <fullName>Subscription Renewal Reminder</fullName>
                </value>
                <value>
                    <fullName>Subscription Renewed</fullName>
                </value>
                <value>
                    <fullName>Subscription Suspended</fullName>
                </value>
                <value>
                    <fullName>Subscription Upgraded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required Override ** The User that generated the Log. Defaults to the same User as the &quot;Created By&quot; User for the same Log.</description>
        <inlineHelpText>** System Calculated Required Override ** The User that generated the Log. Defaults to the same User as the &quot;Created By&quot; User for the same Log.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>